Update Guides “installing-code-composer-studio”

--- a/src/content/docs/guides/installing-code-composer-studio.mdx
+++ b/src/content/docs/guides/installing-code-composer-studio.mdx
@@ -1,4 +1,32 @@
 ---
 title: Installing Code Composer Studio
 ---
-HelloW
+\---
+
+title: Lab 3   - Test 02
+
+\---
+
+
+
+import { Tabs, TabItem } from '@astrojs/starlight/components';
+
+import { Card, CardGrid } from '@astrojs/starlight/components';
+
+import { LinkCard } from '@astrojs/starlight/components';
+
+
+Welcome to Lab 0! This comprehensive guide will help you set up your development environment for creating a stopwatch with graphical menu using the MSP430 microcontroller.
+
+## Lab Overview
+
+<Card title="Lab 0 Objectives" icon="rocket">
+**Main Goal:** Implement a stopwatch controlled by buttons and a navigable graphical menu.
+
+**Key Learning Topics:**
+- Peripheral initialization
+- Button debouncing techniques
+- Timer interrupt service routines (ISR)
+- Display management systems
+- Modular code structure design
+</Card>
