--- a/src/content/docs/guides/installing-code-composer-studio.mdx
+++ b/src/content/docs/guides/installing-code-composer-studio.mdx
@@ -1,6 +1,8 @@
 ---
-title: Installing Code Composer Studio
+title: Course Syllabus
+description: ECE 3849 Real-Time Embedded Systems - Course policies, schedule, and requirements
 ---
+
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 import { Card, CardGrid } from '@astrojs/starlight/components';
 import { LinkCard } from '@astrojs/starlight/components';
