Corrige la redacción en la descripción del sistema de tiempo real en la sección de tarjetas

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -39,7 +39,7 @@ import freertos from '../../assets/freertos.png';
 
 <CardGrid stagger>
   <Card title="🎯 Real-Time Systems" icon="rocket">
-    Build systems that respond to events within microsecond timing deadlines using ARM Cortex-M4F architecture
+    Build systems that respond to events within microsecond, timing deadlines using ARM Cortex-M4F architecture
   </Card>
   <Card title="⚙️ Professional RTOS" icon="setting">
     Master TI-RTOS for multitasking applications used in automotive and aerospace industries
